# SOEM

./: CMakeLists.txt
cmake/: Linux.cmake
oshw/linux/: nicdrv.c
samples/ec_sample/: CMakeLists.txt
samples/eni_test/: CMakeLists.txt
samples/eoe_test/: CMakeLists.txt
soem/: ethercatconfig.c  ethercatmain.c  ethercatmain.h
test/linux/eepromtool/: CMakeLists.txt
test/linux/simple_test/: CMakeLists.txt  simple_test.c
test/linux/slaveinfo/: CMakeLists.txt  slaveinfo.c
test/simple_ng/: CMakeLists.txt
